2024-05-05T00:55:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8954476186 # 243
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-05
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 319 1101 / 323 1128
* notice: next accum: outdated-unq outdated-all / unq all: 319 1101 / 324 1131
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-05-04]

2024-05-03T00:54:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8932540377 # 237
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-03
* notice: last 14d: unq all: 3 27
* notice: prev accum: outdated-unq outdated-all / unq all: 319 1101 / 323 1126
* notice: next accum: outdated-unq outdated-all / unq all: 319 1101 / 323 1128
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2024-05-02]

2024-05-02T16:13:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8927038789 # 236
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
* notice: last 14d: unq all: 3 25
* notice: prev accum: outdated-unq outdated-all / unq all: 317 1095 / 322 1124
* notice: next accum: outdated-unq outdated-all / unq all: 319 1101 / 323 1126
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-04-18] / [2024-05-02]

2024-04-29T16:13:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8881871211 # 227