@@ -1,6 +1,6 @@
 {
-  "count": 30,
-  "uniques": 4,
+  "count": 44,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2024-04-25T00:00:00Z",
@@ -20,6 +20,11 @@
     {
       "timestamp": "2024-05-04T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-06T00:00:00Z",
+      "count": 14,
       "uniques": 1
     }
   ]
