@@ -1,3 +1,12 @@
+2024-05-06T16:14:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8972258932 # 248
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-06
+* notice: last 14d: unq all: 5 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 319 1101 / 324 1131
+* notice: next accum: outdated-unq outdated-all / unq all: 319 1101 / 325 1145
+* notice: prev exec diff / last date diff / accum: unq all: +1 +14 -0 -0 / +1 +14 -0 -0 / 1 14
+* notice: removed / changed dates: [] / [2024-05-06]
+
 2024-05-05T00:55:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8954476186 # 243
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-05
